--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+<iframe src="https://docs.google.com/forms/d/e/1FAIpQLSd7eEJCYnQuqrK6qvnGr1sul1d8iu-DLom7GfvVbsODyQhoSg/viewform?embedded=true" width="640" height="465" frameborder="0" marginheight="0" marginwidth="0">Cargando…</iframe>
 <h1>Privacy Policy</h1>
 <p>Last updated: March 15, 2023</p>
 <p>This Privacy Policy describes Our policies and procedures on the collection, use and disclosure of Your information when You use the Service and tells You about Your privacy rights and how the law protects You.</p>
